# land_surface_time_series

./: .gitignore  LICENSE  README.md  imputation_concat.drawio  ltf_concat.drawio  pyproject.toml  soil_moisture_example.csv  soil_temperature_example.csv  stf_concat.drawio  temp.ipynb  visual.ipynb  visual_paper.ipynb
lsts/: __init__.py  imputation.py  long_term_forecast.py  requirements.txt  short_term_forecast.py
lsts/layers/: SelfAttention_Family.py
lsts/models/: DLinear.py  EALSTM.py  LSTM.py  PatchTST.py  TimesNet.py  iTransformer.py
lsts/scaler/: imputation_short_term_forecast_air_temperature.joblib  imputation_short_term_forecast_precipitation.joblib  imputation_short_term_forecast_snow_depth.joblib  imputation_short_term_forecast_snow_water_equivalent.joblib  imputation_short_term_forecast_soil_moisture.joblib  imputation_short_term_forecast_soil_suction.joblib  imputation_short_term_forecast_soil_temperature.joblib  imputation_short_term_forecast_surface_temperature.joblib  long_term_forecast_air_temperature.joblib  long_term_forecast_precipitation.joblib  long_term_forecast_snow_depth.joblib  long_term_forecast_snow_water_equivalent.joblib  long_term_forecast_soil_moisture.joblib  long_term_forecast_soil_suction.joblib  long_term_forecast_soil_temperature.joblib  long_term_forecast_surface_temperature.joblib
lsts/utils/: prompt_bank.py  tools.py
test/: main.ipynb  main.py  plot.ipynb  requirements.txt  resources.csv  run_resources.sh  test_README.md  test_time_resources.py
test/results/: air_temperature.csv  snow_depth.csv  snow_water_equivalent.csv  (+3 more)
(+81 files in other folders)
