[tool.poetry]
name = "lsts"
version = "0.2.0"
description = "A lightweight, fast, advanced deep learning time series package for long and short-term forecast and missing value imputation of land surface variables."
authors = ["lizhuoq <m15004059308@163.com>"]
license = "cc-by-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.18"
einops = "0.4.0"
matplotlib = "3.7.0"
numpy = "1.23.5"
pandas = "1.5.3"
patool = "1.12"
reformer-pytorch = "1.4.4"
scikit-learn = "1.2.2"
scipy = "1.10.1"
sktime = "0.16.1"
sympy = "1.11.1"
torch = "1.7.1"
tqdm = "4.64.1"
huggingface_hub = "0.21.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
